<resources>
    <string name="app_name">布卡漫画</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="confirm_title">提示</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="content_description_icon">icon</string>
    <string name="refresh">刷新</string>
    <string name="processing">加载中</string>
    <string name="download">下载</string>
    <string name="download_fail">下载安装包失败</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="redo">重试</string>
    <string name="install_msp">你尚未安装支付宝移动快捷支付服务，请立即安装</string>
    <string name="install_alipay">你尚未安装支付宝钱包，请立即安装</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="hello">Hello World, ActivityStartup!</string>
    <string name="app_en_name">bukaManga</string>
    <string name="servermain">http://192.168.1.105/test/req.php</string>
    <string name="confirm">确认</string>
    <string name="btnOk">确定</string>
    <string name="btnCancel">取消</string>
    <string name="edit">编辑</string>
    <string name="selAll">全选</string>
    <string name="delete">删除</string>
    <string name="TipsTitle">提示</string>
    <string name="done">完成</string>
    <string name="btnYes">是</string>
    <string name="btnNo">否</string>
    <string name="requestRetryTips">联网失败,请重试。</string>
    <string name="btnRetry">重试</string>
    <string name="itemMore">显示更多</string>
    <string name="isee">我知道了</string>
    <string name="networkError">没有网络哦，请检查网络设置</string>
    <string name="itemMoreErr">联网失败，请点此重试。</string>
    <string name="itemLoading">正在获取...</string>
    <string name="listLoadErrText">联网失败，请重试。</string>
    <string name="cateLoadErrText">获取漫画分类失败，请重试。</string>
    <string name="detailLoadErrText">联网失败，请重试。</string>
    <string name="chapterLoadErrText">联网失败，请重试。</string>
    <string name="listReBtnText">重新获取</string>
    <string name="tabHome">书架</string>
    <string name="tabRecommend">推荐</string>
    <string name="tabClassify">分类</string>
    <string name="tabSearch">搜索</string>
    <string name="tabMore">更多</string>
    <string name="topBtnFavorite">收藏</string>
    <string name="topBtnLocalManga">本地漫画</string>
    <string name="topBtnHistory">历史</string>
    <string name="topBtnDownloadMag">下载管理</string>
    <string name="FavEmptyTips">没有收藏漫画哦！</string>
    <string name="HisEmptyTips">没有阅读记录哦！</string>
    <string name="DelEmptyTips">没有下载记录哦！</string>
    <string name="searchTips">漫画名 | 作者</string>
    <string name="searchResTitle">搜索：%s</string>
    <string name="historyTitle">我的书架</string>
    <string name="topBtnBookmark">漫画书签</string>
    <string name="bookmarkEmpty">此漫画没有保存的书签</string>
    <string name="topBtnAtoZ">A - Z</string>
    <string name="topBtnType">漫画类型</string>
    <string name="topBtnTopic">精彩推荐</string>
    <string name="topBtnHot">热门连载</string>
    <string name="topBtnNew">最近更新</string>
    <string name="topBtnU17">国漫原创</string>
    <string name="sItemRateText">评分</string>
    <string name="chooseChapter">定位到</string>
    <string name="detailBtnEnterText">查看目录</string>
    <string name="detailFinishedTitle"><Data>%s <font color="#a01e00">(完)</font></Data></string>
    <string name="detailOuterResourceTitle"><Data>%s <font color="#0f6d9b">(站外资源)</font></Data></string>
    <string name="detailAuthorText"><Data>作　者：<font color="#0f6d9b">%s</font></Data></string>
    <string name="detailUpdateText">更新：%s</string>
    <string name="detailPopularText">战斗力：%s</string>
    <string name="detailFromText">来　源：%s</string>
    <string name="listChapterNull">很抱歉哦，本漫画暂时没有被收录.先看看别的吧，不如</string>
    <string name="listChapterNullMsgBtn">哦</string>
    <string name="hua">%d话</string>
    <string name="juan">%d卷</string>
    <string name="diNhua">第%d话</string>
    <string name="diNjuan">第%d卷</string>
    <string name="danBenN">番外%d</string>
    <string name="menuhua">话</string>
    <string name="menujuan">卷</string>
    <string name="menuindex" formatted="false">第 %d %s</string>
    <string name="danBen">番外篇</string>
    <string name="huaTips">连载 (话)</string>
    <string name="juanTips">单行本 (卷)</string>
    <string name="commonChapterTips">连载</string>
    <string name="detailGridLastUp">最后更新：%s</string>
    <string name="detailWebGridLastUp">最新：%s</string>
    <string name="juanTipsInclude">等于 1 ~ %d 话</string>
    <string name="chapterBtnDlMar">下载管理</string>
    <string name="chapterDownLoaUnKnow" />
    <string name="chapterCheckingNew">正在载入最新章节...</string>
    <string name="chapterRead">观看</string>
    <string name="chapterReadOnLine">在线观看</string>
    <string name="chapterComplete">已经下载</string>
    <string name="chapterDownLoad">点击下载</string>
    <string name="chapterMenuTitle">定位到</string>
    <string name="chapterSort">排序</string>
    <string name="detailDescBtnOp">展开</string>
    <string name="detailDescBtnCl">收起</string>
    <string name="detailRate">评分：</string>
    <string name="detailDlTitle">选择需下载的章节</string>
    <string name="detailDlCount" formatted="false">%d项, %s</string>
    <string name="detailFav">添加收藏</string>
    <string name="detailRemoveFav">已收藏</string>
    <string name="detailFavTips">添加收藏成功</string>
    <string name="detailFavErrTips">添加收藏失败</string>
    <string name="detailRemoveFavTips">已取消收藏</string>
    <string name="detailRead">开始阅读</string>
    <string name="detailReadContinue">续看 %s</string>
    <string name="historyReadGoon">继续观看</string>
    <string name="mangaComments">漫画评论</string>
    <string name="detailDlBtn">确认下载</string>
    <string name="detailDlAll">全选</string>
    <string name="detailDlCancelSel">取消</string>
    <string name="detailSWBtn">下载</string>
    <string name="detailDlmenu">下载漫画</string>
    <string name="detailDlAllTips">您选择的漫画总大小为 %s ,确定要继续下载吗？</string>
    <string name="detailDlAllTips2">"您选择的漫画共 %s ！ 可能需要较长时间下载，并会占用大量的SD卡空间，建议您减少下载的章节数量，或在线观看。 您确定要下载吗？"</string>
    <string name="detailDlAddTadkTips">添加下载任务成功</string>
    <string name="notDownloadFileExists">"已下载的文件丢失,可能： *最近清空过SD卡 *被其它缓存清理工具误删"</string>
    <string name="historyRead">看到%s</string>
    <string name="historyUpDate">更新到%s</string>
    <string name="historyReadNow">立即观看</string>
    <string name="historyChapter">详情目录</string>
    <string name="historyDlmag">下载管理</string>
    <string name="historyMenuCancel">取消</string>
    <string name="historyDelete">删除</string>
    <string name="removeDownloadedTips">同时删除该漫画已下载的文件</string>
    <string name="removeDownloadingTips">"该漫画正在下载中，不能同时删除文件。 请先停止该漫画的下载任务。"</string>
    <string name="DelPreparing">正在准备删除漫画...</string>
    <string name="DeletingFiles">正在删除漫画文件</string>
    <string name="DeletingRs">正在删除历史记录</string>
    <string name="historyDelErr">删除漫画完成,但 %s 目录下有残留文件,请手动删除</string>
    <string name="FavRemove">删除</string>
    <string name="FavDetail">漫画详情</string>
    <string name="FavClear">全部清空</string>
    <string name="FavClearTips">确定要清空全部阅读记录吗？</string>
    <string name="dlMarEdit">编辑</string>
    <string name="dlMarDelBtn">删除</string>
    <string name="dlMarDownloading">下载中</string>
    <string name="dlMarPaused">已暂停</string>
    <string name="dlMarPausing">正在暂停...</string>
    <string name="dlMarWaiting">等待中</string>
    <string name="dlMarError">下载错误</string>
    <string name="dlMarErrorSDTips">下载错误 或 空间不足</string>
    <string name="dlMarComplete">已完成</string>
    <string name="dlMarPauseAll">全部暂停</string>
    <string name="dlMarResumeAll">全部开始</string>
    <string name="dlMarProg">正在下载 %s</string>
    <string name="dlMarPopMenuDetail">章节管理</string>
    <string name="dirParent">返回上级</string>
    <string name="dirOk">确定</string>
    <string name="dirManual">手动输入</string>
    <string name="DlDirTips">请选择下载储存目录:</string>
    <string name="loginTitle">登录</string>
    <string name="oauthSina">新浪微博</string>
    <string name="oauthQQ">腾讯微博</string>
    <string name="oauthFacebook">facebook</string>
    <string name="oauthLoginTips">使用第三方帐号登录</string>
    <string name="setting_horz_flow_page">卷纸模式</string>
    <string name="setting_horz_flow_page_desc">连续读取，支持放大锁定与智能定位</string>
    <string name="setting_horz_flow_clip_page">分图模式</string>
    <string name="setting_horz_flow_clip_page_desc">按漫画分格自动裁剪，合适小屏手机</string>
    <string name="text_set_vert_mode_slide_page">普通模式</string>
    <string name="text_set_vert_mode_slide_page_desc">单页全屏，合适平板</string>
    <string name="text_set_vert_mode_slide_page_clip_bord">智能去边</string>
    <string name="text_set_vert_mode_slide_page_clip_bord_desc">自动去除边缘白边，合适大屏手机</string>
    <string name="text_set_vert_mode_flow_page">卷纸模式</string>
    <string name="text_set_vert_mode_flow_page_desc">上下连续读取，支持放大锁定</string>
    <string name="text_set_adv_double_click_enlarge">允许双击放大</string>
    <string name="text_set_adv_double_click_enlarge_desc">阅读时双击屏幕放大图片</string>
    <string name="text_set_adv_volume_button_jump_page">使用音量键翻页</string>
    <string name="text_set_adv_volume_button_jump_page_desc">音量+:上一页,音量-:下一页</string>
    <string name="text_set_adv_show_page_info">右下显示信息</string>
    <string name="text_set_adv_show_page_info_desc">显示章节、页码、网络、时间、电量</string>
    <string name="text_set_adv_reverse_landscape">允许横屏翻转</string>
    <string name="text_set_adv_reverse_landscape_desc">仅支持Android2.2以上系统</string>
    <string name="text_set_adv_use_immersive_mode">隐藏虚拟按键</string>
    <string name="text_set_adv_use_immersive_mode_desc">仅支持Android4.4</string>
    <string name="loginUsernameHint">邮箱</string>
    <string name="loginPasswordHint">密码</string>
    <string name="regBtn">注册</string>
    <string name="loginBtn">登录</string>
</resources>