<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aboutBg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <RelativeLayout style="@style/topbar" >

        <ImageView
            android:id="@+id/loginBack"
            style="@style/topbar_back_btn" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/loginTitle"
            android:textColor="@color/listTitle"
            android:textSize="16.0sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="48.0dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/loginErrTips"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:paddingLeft="15.0dip"
            android:textColor="#ffc3541b"
            android:textSize="14.0sp" />

        <EditText
            android:id="@+id/username"
            style="@style/editText"
            android:layout_marginTop="5.0dip"
            android:hint="@string/loginUsernameHint"
            android:maxLength="32" />

        <EditText
            android:id="@+id/password"
            style="@style/editText"
            android:hint="@string/loginPasswordHint"
            android:inputType="textPassword"
            android:maxLength="16" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/regBtn"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/common_btn"
                android:gravity="center"
                android:text="@string/regBtn"
                android:textColor="@drawable/common_btn_text_color"
                android:textSize="15.0sp" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:layout_marginLeft="5.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/emphasize_btn"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/loginBtn"
                android:textColor="@drawable/emphsize_btn_text_colors"
                android:textSize="15.0sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="24.0dip"
            android:layout_marginTop="30.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="2.0px"
                android:layout_centerVertical="true"
                android:background="@drawable/line_relief"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24.0dip"
                android:layout_centerInParent="true"
                android:background="@drawable/bg"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:text="@string/oauthLoginTips"
                android:textColor="@color/text"
                android:textSize="13.0sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/authorizeMode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/weiboLayout"
                style="@style/loginBtnLayout" >

                <ImageView
                    style="@style/loginBtnImg"
                    android:src="@drawable/sinaweibo" />

                <TextView
                    style="@style/loginBtnText"
                    android:text="@string/oauthSina" />
"
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tencentLayout"
                style="@style/loginBtnLayout" >

                <ImageView
                    style="@style/loginBtnImg"
                    android:src="@drawable/tencent" />

                <TextView
                    style="@style/loginBtnText"
                    android:text="@string/oauthQQ" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/facebookLayout"
                style="@style/loginBtnLayout" >

                <ImageView
                    style="@style/loginBtnImg"
                    android:src="@drawable/facebook" />

                <TextView
                    style="@style/loginBtnText"
                    android:text="@string/oauthFacebook" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

<!--     <include -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="fill_parent" -->
<!--         android:layout_marginTop="48.0dip" -->
<!--         layout="@layout/view_setusername" /> -->

</RelativeLayout>