<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff000000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_dirTips"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5.0dip"
        android:text="@string/DlDirTips"
        android:textColor="#ffffffff"
        android:textSize="16.0sp" />

    <LinearLayout
        android:id="@+id/dirTopBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_dirTips"
        android:background="#ff333333"
        android:orientation="horizontal"
        android:paddingBottom="5.0dip"
        android:paddingLeft="5.0dip"
        android:paddingTop="5.0dip" >

        <TextView
            android:id="@+id/tv_dirPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:gravity="right"
            android:paddingLeft="5.0dip"
            android:paddingRight="60.0dip"
            android:singleLine="true"
            android:textColor="#ffffffff"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/dirAppName"
            android:layout_width="60.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-60.0dip"
            android:ellipsize="start"
            android:singleLine="true"
            android:text=""
            android:textColor="#ff5d5d5d"
            android:textSize="16.0sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_file"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/dirTopBar"
        android:layout_marginBottom="50.0dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_dirManual"
            android:layout_width="wrap_content"
            android:layout_height="50.0dip"
            android:layout_weight="1.0"
            android:text="@string/dirManual" />

        <Button
            android:id="@+id/btn_dirOk"
            android:layout_width="wrap_content"
            android:layout_height="50.0dip"
            android:layout_weight="1.0"
            android:text="@string/dirOk" />

        <Button
            android:id="@+id/btn_dirParent"
            android:layout_width="wrap_content"
            android:layout_height="50.0dip"
            android:layout_weight="1.0"
            android:text="@string/dirParent" />
    </LinearLayout>

</RelativeLayout>